# Raytracer

./: .gitignore  README.md  Raytracer.sln
RaytracerNew2/: AmbientLightSystem.h  AmbientOcclusion.cpp  AmbientOcclusion.h  AreaLight.cpp  AreaLight.h  BSDF.cpp  BSDF.h  BSSRDF.h  BasicMath.h  BoundingBox.cpp  BoundingBox.h  BoxFilter.cpp  BoxFilter.h  Bvh.cpp  Bvh.h  CDF.cpp  CDF.h  CMakeLists.txt  Camera.cpp  Camera.h  CarPaint.cpp  CarPaint.h  CheckerTexture.cpp  CheckerTexture.h  Color.cpp  Color.h  Common.cpp  Common.h  Conductor.cpp  Conductor.h  ConstantTexture.cpp  ConstantTexture.h  Cube.cpp  Cube.h  Dielectric.cpp  Dielectric.h  DifferentialGeometry.h  Diffuse.cpp  Diffuse.h  DiffuseSystem.h  (+168 more)
RaytracerNew2/Scenes/: Ajax-IS.xml  AudiRS6.xml  Buddha-MIS.xml  DepthOfField.xml  Mandelbulb.xml  MatPreview.xml  MatPreview2.xml  Odyssey-IS.xml  SimpleSmoke.xml  SphereAO-MIS.xml  Table-MIS.xml  Table-bssrdf.xml  Table-milk3.xml  bathroom-rtPT.xml  bedroom.xml  cbox-sss.xml  cbox_fog.xml  cbox_path.xml  cbox_path_text.xml  cbox_path_vol.xml  dragon-sss.xml  fire.xml  kingsTreasure.xml  lamborghiniAventador.xml  oldkingsTreasure.xml  steam.xml  teaSet.xml  teapot.xml  testCarPaint.xml  testCbox.xml  veach-MIS.xml  velvet.xml
RaytracerNew2/Scenes/old scenes/: MatPreview.xml  SimpleSmoke.xml  SphereAO-MIS.xml  Table-milk.xml  cbox_fog.xml  lamborghiniAventador.xml  statue-jade.xml  teaSet.xml  testCbox.xml  velvet.xml
RaytracerNew2/data/IOR/: Fe.eta.spd  Fe.k.spd
RaytracerNew2/src/accelStruct/: Bvh.cpp  Bvh.h
RaytracerNew2/src/bsdf/: AlphaBSDF.cpp  AlphaBSDF.h  BSDF.h  (+41 more)
(+182 files in other folders)
